test/files/neg/prohibit-early-type-def.scala
class C extends { type T = Int } with Any