test/files/neg/prohibit-early-type-def.check
prohibit-early-type-def.scala:1: error: only concrete field definitions allowed in early object initialization section
class C extends { type T = Int } with Any
                       ^
one error found
